[project]
name = "python-dropbox-api"
version = "0.1.2"
description = "This is a lightweight wrapper for the Dropbox API intended for use in Home Assistant."
authors = [
    {name = "Brandon Rothweiler",email = "2292715+bdr99@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.0,<4.0.0)"
]

[tool.poetry]
packages = [
  {include = "python_dropbox_api"},
  {include = "python_dropbox_api/py.typed"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
